--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://grozerschat.herokuapp.com/socket.io/socket.io.js" defer></script>
+    <script src="https://gooseschat.herokuapp.com/socket.io/socket.io.js" defer></script>
     <script src="script.js" defer></script>
 </head>
 <body>
