--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <form id="form">
+        <div id="form">
             <div>
                 <div>Введіть нікнейм:</div>
                 <input type="text" id="input-name">
@@ -20,7 +20,7 @@
 
                 </div>
             </div>
-        </form>
+        </div>
         <div id="chat" class="hidden">
             <div id="online-users">
                 <div>Онлайн:</div>
